[FIX] fso_website_email wrapwrap no upper padding

--- a/addons-own/fso_website_email/static/src/css/email_selection.css
+++ b/addons-own/fso_website_email/static/src/css/email_selection.css
@@ -1,3 +1,9 @@
+header, main, footer {
+    color: #000000;
+    background-color: #ffffff;
+}
+
+
 #email_template .email_preview_border {
     overflow: hidden !important;
     border: 1px solid #d8d8d8;
